Almost Done, Revisar Contenido de las Pages, Arreglar Maps con Api de Console

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Novaturf - Artificial Grass</title>
+  <title>Novaturf Artificial Grass - Home</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+  <!-- NAV -->
   <div class="wrap">
     <div class="container">
       <div class="row">
@@ -34,21 +35,22 @@
           </p>
           <div class="social-media w-auto" style="margin-top: 3px;">
             <p class="mb-0 d-flex justify-content-center">
-              <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-whatsapp"><i
+              <a href="https://wa.me/+15615308018/?text=Hello, I'm interested in one of your services, can I know more?.. Hola, estoy interesado en uno de sus servicios, puedo saber mas información?.."
+                target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-whatsapp"><i
                     class="sr-only">Whatsapp</i></span></a>
-              <a href="https://www.facebook.com/novaturfcorporation/"
+              <a href="https://www.facebook.com/novaturfcorporation/" target="_blank"
                 class="d-flex align-items-center justify-content-center hide-sm"><span class="fa fa-facebook"><i
                     class="sr-only">Facebook</i></span></a>
-              <a href="https://www.instagram.com/novaturfcorporation/"
+              <a href="https://www.instagram.com/novaturfcorporation/" target="_blank"
                 class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i
                     class="sr-only">Instagram</i></span></a>
-              <a href="https://www.linkedin.com/company/novaturf-corp-artificial-grass"
+              <a href="https://www.linkedin.com/company/novaturf-corp-artificial-grass" target="_blank"
                 class="d-flex align-items-center justify-content-center hide-xs"><span class="fa fa-linkedin"><i
                     class="sr-only">Linkedin</i></span></a>
-              <a href="https://www.yelp.com/biz/novaturf-corp-artificial-grass-medley?osq=novaturf"
+              <a href="https://www.yelp.com/biz/novaturf-corp-artificial-grass-medley?osq=novaturf" target="_blank"
                 class="d-flex align-items-center justify-content-center hide-xs"><span class="fa fa-yelp"><i
                     class="sr-only">Yelp</i></span></a>
-              <a href="https://g.page/NovaTurf?share"
+              <a href="https://g.page/NovaTurf?share" target="_blank"
                 class="d-flex align-items-center justify-content-center hide-md"><span class="fa fa-google"><i
                     class="sr-only">Google</i></span></a>
             </p>
@@ -86,11 +88,12 @@
             <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">Services</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="#">Services</a>
               <a class="dropdown-item" href="ArtificialGrass.html">Artificial Grass</a>
               <a class="dropdown-item" href="Driveway.html">Driveway</a>
               <a class="dropdown-item" href="IvyWalls.html">Ivy Walls</a>
               <a class="dropdown-item" href="RubberMulch.html">Rubber Mulch</a>
+              <a class="dropdown-item" href="pavers.html">Pavers</a>
+              <a class="dropdown-item" href="putting.html">Putting Greens</a>
             </div>
           </li>
           <li class="nav-item">
@@ -104,7 +107,7 @@
 
   <div class="hero-wrap hero-wrap1">
     <div class="header-video">
-      <video src="images/video1.mp4" autoplay muted loop></video>
+      <video src="images/video1.mp4" playsinline autoplay muted loop></video>
     </div>
     <div class="overlay"></div>
     <div class="container container1">
@@ -116,7 +119,7 @@
               <span>areas</span>.
             </h1>
             <p>
-              <a href="#" class="btn btn-primary py-2 px-4">Free Estimate</a>
+              <a href="contact.html" class="btn btn-primary py-2 px-4">Free Estimate</a>
               <a href="#" class="btn btn-white btn-outline-white py-2 px-4">Chat with us!</a>
             </p>
           </div>
@@ -563,6 +566,7 @@
   </section>
   <!-- End Frequently Asked Questions Section -->
 
+  <!-- Footer -->
   <footer class="ftco-footer">
     <div class="container">
       <div class="row mb-5">
@@ -588,25 +592,25 @@
                     class="fa fa-whatsapp"><i class="sr-only">Whatsapp</i></span></a>
               </li>
               <li class="ftco-animate">
-                <a href="https://www.facebook.com/novaturfcorporation/"
+                <a href="https://www.facebook.com/novaturfcorporation/" target="_blank"
                   class="d-flex align-items-center justify-content-center hide-sm"><span class="fa fa-facebook"><i
                       class="sr-only">Facebook</i></span></a>
               </li>
 
-              <li class="ftco-animate"><a href="https://www.instagram.com/novaturfcorporation/"
+              <li class="ftco-animate"><a href="https://www.instagram.com/novaturfcorporation/" target="_blank"
                   class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i
                       class="sr-only">Instagram</i></span></a>
               </li>
-              <li class="ftco-animate"><a href="https://g.page/NovaTurf?share"
+              <li class="ftco-animate"><a href="https://g.page/NovaTurf?share" target="_blank"
                   class="d-flex align-items-center justify-content-center hide-md hide-lg"><span class="fa fa-google"><i
                       class="sr-only">Google</i></span></a>
               </li>
               <li class="ftco-animate"><a href="https://www.linkedin.com/company/novaturf-corp-artificial-grass"
-                  class="d-flex align-items-center justify-content-center hide-xs hide-lg"><span
+                  target="_blank" class="d-flex align-items-center justify-content-center hide-xs hide-lg"><span
                     class="fa fa-linkedin"><i class="sr-only">Linkedin</i></span></a>
               </li>
               <li class="ftco-animate"><a
-                  href="https://www.yelp.com/biz/novaturf-corp-artificial-grass-medley?osq=novaturf"
+                  href="https://www.yelp.com/biz/novaturf-corp-artificial-grass-medley?osq=novaturf" target="_blank"
                   class="d-flex align-items-center justify-content-center hide-xs hide-lg"><span class="fa fa-yelp"><i
                       class="sr-only">Yelp</i></span></a>
               </li>
@@ -697,6 +701,7 @@
       </div>
     </div>
   </footer>
+  <!-- End of Footer -->
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen">
@@ -706,6 +711,18 @@
         stroke="#F96D00" />
     </svg>
   </div>
+
+  <!-- Smartsupp Live Chat script -->
+  <script type="text/javascript">
+    var _smartsupp = _smartsupp || {};
+    _smartsupp.key = 'd2a369e640389ba2d553011ac430ec1546a9b679';
+    window.smartsupp || (function (d) {
+      var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
+      s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
+      c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
+      c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
+    })(document);
+  </script>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
