Fix Whatsapp Right Number

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 					</p>
 					<div class="social-media w-auto" style="margin-top: 3px;">
 						<p class="mb-0 d-flex justify-content-center">
-							<a href="https://wa.me/+15615308018/?text=Hello, I'm interested in one of your services, can I know more?.. Hola, estoy interesado en uno de sus servicios, puedo saber mas información?.."
+							<a href="https://wa.me/+19548265606/?text=Hello, I'm interested in one of your services, can I know more?.. Hola, estoy interesado en uno de sus servicios, puedo saber mas información?.."
 								target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-whatsapp"><i
 										class="sr-only">Whatsapp</i></span></a>
 							<a href="https://www.facebook.com/novaturfcorporation/" target="_blank"
@@ -552,9 +552,9 @@
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/jquery.animateNumber.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
-	<script
+	<!-- <script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-	<script src="js/google-map.js"></script>
+	<script src="js/google-map.js"></script> -->
 	<script src="js/main.js"></script>
 
 </body>
