--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
           </p>
           <div class="social-media w-auto" style="margin-top: 3px;">
             <p class="mb-0 d-flex justify-content-center">
-              <a href="https://wa.me/+15615308018/?text=Hello, I'm interested in one of your services, can I know more?.. Hola, estoy interesado en uno de sus servicios, puedo saber mas información?.."
+              <a href="https://wa.me/+19548265606/?text=Hello, I'm interested in one of your services, can I know more?.. Hola, estoy interesado en uno de sus servicios, puedo saber mas información?.."
                 target="_blank" class="d-flex align-items-center justify-content-center"><span class="fa fa-whatsapp"><i
                     class="sr-only">Whatsapp</i></span></a>
               <a href="https://www.facebook.com/novaturfcorporation/" target="_blank"
@@ -196,31 +196,33 @@
             <div class="row no-gutters">
               <div class="col-md-7">
                 <div class="contact-wrap w-100 p-md-5 p-4">
-                  <h3 class="mb-4">Contact Us</h3>
+                  <h3 class="mb-4 text-center">Contact Us - <strong>FREE Estimate</strong></h3>
                   <form method="POST" id="contactForm" name="contactForm" class="contactForm">
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
                           <label class="label" for="name">Full Name</label>
-                          <input type="text" class="form-control" name="name" id="name" placeholder="Name" />
+                          <input required type="text" class="form-control" name="name" id="name" placeholder="Name" />
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="form-group">
                           <label class="label" for="email">Email Address</label>
-                          <input type="email" class="form-control" name="email" id="email" placeholder="Email" />
+                          <input required type="email" class="form-control" name="email" id="email"
+                            placeholder="Email" />
                         </div>
                       </div>
                       <div class="col-md-12">
                         <div class="form-group">
                           <label class="label" for="subject">Subject</label>
-                          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" />
+                          <input required type="text" class="form-control" name="subject" id="subject"
+                            placeholder="Subject" />
                         </div>
                       </div>
                       <div class="col-md-12">
                         <div class="form-group">
                           <label class="label" for="#">Message</label>
-                          <textarea name="message" class="form-control" id="message" cols="30" rows="4"
+                          <textarea required name="message" class="form-control" id="message" cols="30" rows="4"
                             placeholder="Message"></textarea>
                         </div>
                       </div>
@@ -422,9 +424,9 @@
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script
+  <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
+  <script src="js/google-map.js"></script> -->
   <script src="js/email.js"></script>
   <script src="js/main.js"></script>
 </body>
