Carousel fixed, emailJS added, minor fixes, Google Analytics an FB Pixel Added

--- a/ArtificialGrass.html
+++ b/ArtificialGrass.html
@@ -23,6 +23,36 @@
 
   <link rel="stylesheet" href="css/flaticon.css" />
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6CN6640FLW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-6CN6640FLW');
+  </script>
+
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '427079438591209');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=427079438591209&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -199,16 +229,8 @@
             <a class="nav-link ftco-animate active mr-lg-1" id="v-pills-1-tab" data-toggle="pill" href="#v-pills-1"
               role="tab" aria-controls="v-pills-1" aria-selected="true">Description</a>
 
-            <!-- <a
-                class="nav-link ftco-animate mr-lg-1"
-                id="v-pills-2-tab"
-                data-toggle="pill"
-                href="#v-pills-2"
-                role="tab"
-                aria-controls="v-pills-2"
-                aria-selected="false"
-                >Manufacturer</a
-              > -->
+            <!-- <a class="nav-link ftco-animate mr-lg-1" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2" role="tab"
+              aria-controls="v-pills-2" aria-selected="false">Manufacturer</a> -->
 
             <a class="nav-link ftco-animate" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab"
               aria-controls="v-pills-3" aria-selected="false">Reviews</a>
@@ -216,29 +238,31 @@
         </div>
         <div class="col-md-12 tab-wrap">
           <div class="tab-content bg-light" id="v-pills-tabContent">
+
             <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="day-1-tab">
               <div class="p-4">
                 <h3 class="mb-4">Synthetic Turf</h3>
-                <p>Tipos de gramas</p>
+                <p></p>
               </div>
             </div>
 
-            <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-day-2-tab">
+            <!-- <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-day-2-tab">
               <div class="p-4">
-                <!-- <h3 class="mb-4">Manufactured By Liquor Store</h3>
-                  <p>
-                    On her way she met a copy. The copy warned the Little Blind
-                    Text, that where it came from it would have been rewritten a
-                    thousand times and everything that was left from its origin
-                    would be the word "and" and the Little Blind Text should
-                    turn around and return to its own, safe country. But nothing
-                    the copy said could convince her and so it didn’t take long
-                    until a few insidious Copy Writers ambushed her, made her
-                    drunk with Longe and Parole and dragged her into their
-                    agency, where they abused her for their.
-                  </p> -->
+                <h3 class="mb-4">Manufactured By Liquor Store</h3>
+                <p>
+                  On her way she met a copy. The copy warned the Little Blind
+                  Text, that where it came from it would have been rewritten a
+                  thousand times and everything that was left from its origin
+                  would be the word "and" and the Little Blind Text should
+                  turn around and return to its own, safe country. But nothing
+                  the copy said could convince her and so it didn’t take long
+                  until a few insidious Copy Writers ambushed her, made her
+                  drunk with Longe and Parole and dragged her into their
+                  agency, where they abused her for their.
+                </p>
               </div>
-            </div>
+            </div> -->
+
             <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-day-3-tab">
               <div class="row p-4">
                 <div class="col-md-7">
