--- a/index.html
+++ b/index.html
@@ -20,6 +20,36 @@
 
   <link rel="stylesheet" href="css/flaticon.css" />
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6CN6640FLW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-6CN6640FLW');
+  </script>
+
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '427079438591209');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=427079438591209&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -106,26 +136,63 @@
   <!-- END nav -->
 
   <div class="hero-wrap hero-wrap1">
-    <div class="header-video">
+    <!-- <div class="header-video">
       <video src="images/video1.mp4" playsinline autoplay muted loop></video>
+    </div> -->
+
+    <div id="carouselExampleIndicators" class="carousel slide header-carousel" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 header-img header-img-75x" src="images/hero_img/hero1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 header-img" src="images/hero_img/hero2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 header-img" src="images/hero_img/hero3.jpg" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 header-img header-img-10x" src="images/hero_img/hero4.jpg" alt="Fourth slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 header-img header-img-25x" src="images/hero_img/hero5.jpg" alt="Fifth slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
+
     <div class="overlay"></div>
+
     <div class="container container1">
       <div class="row no-gutters slider-text align-items-center justify-content-center">
         <div class="col-md-8 ftco-animate d-flex align-items-end">
           <div class="text w-100 text-center">
             <h1 class="mb-4 letras">
-              High-end <span> artificial turf</span> for your premium
-              <span>areas</span>.
+              High-end <span>artificial turf</span> for your <span>premium</span> areas.
             </h1>
             <p>
-              <a href="contact.html" class="btn btn-primary py-2 px-4">Free Estimate</a>
-              <a href="#" class="btn btn-white btn-outline-white py-2 px-4">Chat with us!</a>
+              <a href="contact.html" class="btn btn-primary-title btn-primary py-2 px-4">Free Estimate</a>
+              <a href="gallery.html" class="btn py-2 px-4 btn-second">Look our Jobs</a>
             </p>
           </div>
         </div>
       </div>
     </div>
+
   </div>
 
   <section class="ftco-intro">
