Optimizing CSS defer loading website 2

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
   </noscript>
 
   <!-- Flat Icon -->
-  <link rel="preload" href="css/flaticon.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <!-- <link rel="preload" href="css/flaticon.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
     <link rel="stylesheet" href="css/flaticon.css">
-  </noscript>
+  </noscript> -->
+  <link rel="stylesheet" href="css/flaticon.css">
 
   <!-- Personal CSS -->
   <!-- <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
